--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -1,5 +1,5 @@
 {
-  "locale": "ru-RU",
+  "locale": "ru",
   "translations": {
     "settings.back.title": "{$INTERPOLATION}",
     "settings.title": "Настройки"
